--- a/ShopifyProject/ShopifyWebParent/ShopifyBackend/src/main/resources/templates/index.html
+++ b/ShopifyProject/ShopifyWebParent/ShopifyBackend/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xlmns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
   <title>Shopify Admin Page</title>
   <meta charset="UTF-8">
@@ -7,29 +7,67 @@
   <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}">
   <script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>
   <script type="text/javascript" th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+   <style>
+      
+
+        .navbar-brand {
+            font-size: 24px;
+            font-weight: bold;
+        }
+
+        .navbar-nav li a {
+            font-size: 22px;
+        }
+    
+        .navbar {
+            background-color: #112138; 
+            box-shadow: 0 0 10px rgba(0, 0.5, 0.2, 0.4);
+        }
+
+        .navbar-toggler-icon {
+            background-color: #fff;
+        }
+    </style>
 </head>
 <body>
-	
-  <header>
-    <h1>Shopify Admin</h1>
-    <nav>
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Services</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
 
-  <main>
-    <h2>Welcome to our website!</h2>
-    <p>This is a basic HTML template. Feel free to modify and customize it to suit your needs.</p>
-  </main>
-  
   <div class="container-fluid">
-	  
-	  
+	<div>
+		<nav class="navbar navbar-expand-lg navbar-dark">
+			  <div class="container">
+				  <img  th:src="@{/images/logo.jpeg}" class="img-fluid" style="max-height: 80px; padding-left: 10px;">
+			        <a class="navbar-brand" href="#">Shopify</a>
+			        
+			         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+		                aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+		                <span class="navbar-toggler-icon"></span>
+	           		 </button>
+			        
+			        <div class="collapse navbar-collapse" id="navbarResponsive">
+			            <ul class="navbar-nav ml-auto">
+			                <li class="nav-item active">
+			                    <a class="nav-link" href="#">Home
+			                        <span class="sr-only"></span>
+			                    </a>
+			                </li>
+			                <li class="nav-item">
+			                    <a class="nav-link" href="#">About</a>
+			                </li>
+			                <li class="nav-item">
+			                    <a class="nav-link" href="#">Services</a>
+			                </li>
+			                <li class="nav-item">
+			                    <a class="nav-link" href="#">Contact</a>
+			                </li>
+			            </ul>
+			        </div>
+			    </div>
+			</nav>
+		</div>
+    <div>
+	 <h1>Welcome to our website!</h1>
+     <p>This is a basic HTML template. Feel free to modify and customize it to suit your needs.</p>
+    </div>
   </div>
 
   <footer>
