--- a/ShopifyProject/ShopifyWebParent/ShopifyBackend/src/main/resources/templates/index.html
+++ b/ShopifyProject/ShopifyWebParent/ShopifyBackend/src/main/resources/templates/index.html
@@ -37,27 +37,49 @@
 			  <div class="container">
 				  <img  th:src="@{/images/logo.jpeg}" class="img-fluid" style="max-height: 80px; padding-left: 10px;">
 			        <a class="navbar-brand" href="#">Shopify</a>
-			        
-			         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
-		                aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-		                <span class="navbar-toggler-icon"></span>
-	           		 </button>
-			        
-			        <div class="collapse navbar-collapse" id="navbarResponsive">
-			            <ul class="navbar-nav ml-auto">
-			                <li class="nav-item active">
-			                    <a class="nav-link" href="#">Home
-			                        <span class="sr-only"></span>
-			                    </a>
+			        <button 			  
+			        	class="navbar-toggler" 
+			        	type="button" 
+			        	data-bs-toggle="collapse" 
+			        	data-bs-target="#responsiveNavbar" 
+			        	>
+			        	<span class="navbar-toggler-icon"></span>
+			        	</button>
+	        
+			        <div class="collapse navbar-collapse" id="responsiveNavbar">
+			            <ul class="navbar-nav ">
+			                <li class="nav-item">
+			                    <a class="nav-link" th:href="@{/users}">Users</a>
+			                </li>
+			                 <li class="nav-item">
+			                    <a class="nav-link" th:href="@{/users}">Categories</a>
+			                </li>
+			                 <li class="nav-item">
+			                    <a class="nav-link" th:href="@{/users}">Brands</a>
+			                </li>
+			                 <li class="nav-item">
+			                    <a class="nav-link" th:href="@{/users}">Products</a>
+			                </li>
+			                 <li class="nav-item">
+			                    <a class="nav-link" th:href="@{/users}">Customers</a>
+			                </li>
+			                 <li class="nav-item">
+			                    <a class="nav-link" th:href="@{/users}">Shipping</a>
+			                </li>
+			                 <li class="nav-item">
+			                    <a class="nav-link" th:href="@{/users}">Sales Report</a>
 			                </li>
 			                <li class="nav-item">
-			                    <a class="nav-link" href="#">About</a>
+			                    <a class="nav-link" th:href="@{/users}">Orders</a>
 			                </li>
 			                <li class="nav-item">
-			                    <a class="nav-link" href="#">Services</a>
+			                    <a class="nav-link" th:href="@{/users}">Articles</a>
 			                </li>
 			                <li class="nav-item">
-			                    <a class="nav-link" href="#">Contact</a>
+			                    <a class="nav-link" th:href="@{/users}">Menus</a>
+			                </li>
+			                <li class="nav-item">
+			                    <a class="nav-link" th:href="@{/users}">Settings</a>
 			                </li>
 			            </ul>
 			        </div>
